--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,25 @@ build-backend = "maturin"
 
 [project]
 name = "xonsh-rd-parser"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+
+[project.optional-dependencies]
+test = [
+    "pytest-subtests>=0.13.1",
+    "pytest>=8.2.2",
+    "maturin-import-hook>=0.1.0",
+]
 [tool.maturin]
 features = ["pyo3/extension-module"]
+
+[tool.pdm]
+
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
