--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.7,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "xonsh-rd-parser"
+name = "xonsh_rd_parser"
 requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Rust",
