chore: improve compilation times

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
+#cargo-features = ["codegen-backend"]
+
 [workspace]
 members = ["crates/*"]
+resolver = "2"
 
 [workspace.package]
 edition = "2021"
@@ -156,7 +159,7 @@ wild = { version = "2" }
 zip = { version = "0.6.6", default-features = false, features = ["zstd"] }
 
 [workspace.lints.rust]
-unsafe_code = "warn"
+#unsafe_code = "warn"
 unreachable_pub = "warn"
 
 [workspace.lints.clippy]
@@ -187,3 +190,12 @@ get_unwrap = "warn"
 rc_buffer = "warn"
 rc_mutex = "warn"
 rest_pat_in_fully_bound_structs = "warn"
+
+
+# Enable a small amount of optimization in the dev profile.
+[profile.dev]
+#opt-level = 1
+opt-level = 0
+strip = "debuginfo"
+#codegen-backend = "cranelift"
+#split-debuginfo = "unpacked"
