--- a/crates/ruff_python_ast/Cargo.toml
+++ b/crates/ruff_python_ast/Cargo.toml
@@ -28,6 +28,7 @@ rustc-hash = { workspace = true }
 schemars = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 compact_str = { workspace = true }
+pyo3 = { workspace = true }
 
 [features]
 schemars = ["dep:schemars"]
