--- a/crates/ruff_text_size/Cargo.toml
+++ b/crates/ruff_text_size/Cargo.toml
@@ -8,6 +8,7 @@ rust-version = "1.67.1"
 [dependencies]
 serde = { workspace = true, optional = true }
 schemars = { workspace = true, optional = true }
+pyo3 = { workspace = true}
 
 [dev-dependencies]
 serde_test = { workspace = true }
