refactor: send ast result for start

--- a/crates/ruff_python_parser/Cargo.toml
+++ b/crates/ruff_python_parser/Cargo.toml
@@ -17,6 +17,7 @@ ruff_python_ast = { workspace = true }
 ruff_python_trivia = { workspace = true }
 ruff_text_size = { workspace = true }
 
+pyo3 = { workspace = true }
 bitflags = { workspace = true }
 bstr = { workspace = true }
 compact_str = { workspace = true }
