--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,13 +26,14 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = {workspace = true}
 ruff_python_parser = {workspace = true}
-ruff_python_ast = {workspace = true}
+py_ast = {workspace = true}
 ruff_text_size = {workspace = true}
 
 [workspace.dependencies]
 ruff_cache = { path = "crates/ruff_cache" }
 ruff_macros = { path = "crates/ruff_macros" }
 ruff_python_ast = { path = "crates/ruff_python_ast" }
+py_ast = { path = "crates/py_ast" }
 ruff_python_parser = { path = "crates/ruff_python_parser" }
 ruff_python_trivia = { path = "crates/ruff_python_trivia" }
 ruff_server = { path = "crates/ruff_server" }
@@ -103,7 +104,7 @@ pretty_assertions = "1.3.0"
 proc-macro2 = { version = "1.0.79" }
 pyproject-toml = { version = "0.9.0" }
 pyo3 = { version = "0.22.2", features = [
-  "abi3-py310",
+  "abi3-py311",
   "experimental-inspect"
 ] }
 quick-junit = { version = "0.4.0" }
