--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dynamic = ["version"]
 
 [project.optional-dependencies]
 test = [
+    "pip",
     "pytest-subtests>=0.13.1",
     "pytest>=8.2.2",
     "maturin-import-hook>=0.1.0",
@@ -21,9 +22,6 @@ test = [
 ]
 [tool.maturin]
 features = ["pyo3/extension-module"]
-
-[tool.pdm]
-
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
