--- a/crates/py_ast/Cargo.toml
+++ b/crates/py_ast/Cargo.toml
@@ -11,6 +11,7 @@ license.workspace = true
 
 [dependencies]
 pyo3 = { workspace = true }
+ruff_python_ast = { workspace = true }
 
 [lints]
 workspace = true
