feat: implement empty ast conversions

--- a/crates/py_ast/Cargo.toml
+++ b/crates/py_ast/Cargo.toml
@@ -12,6 +12,7 @@ license.workspace = true
 [dependencies]
 pyo3 = { workspace = true }
 ruff_python_ast = { workspace = true }
+ruff_text_size = { workspace = true }
 
 [lints]
 workspace = true
