--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,10 @@ name = "xonsh_rd_parser"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = {workspace = true}
-ruff_python_parser = {workspace = true}
-py_ast = {workspace = true}
-ruff_text_size = {workspace = true}
+pyo3 = { workspace = true }
+ruff_python_parser = { workspace = true }
+py_ast = { workspace = true }
+ruff_text_size = { workspace = true }
 
 [workspace.dependencies]
 ruff_cache = { path = "crates/ruff_cache" }
@@ -40,6 +40,7 @@ ruff_server = { path = "crates/ruff_server" }
 ruff_source_file = { path = "crates/ruff_source_file" }
 ruff_text_size = { path = "crates/ruff_text_size" }
 
+num-complex = { version = "*" }
 aho-corasick = { version = "1.1.3" }
 annotate-snippets = { version = "0.9.2", features = ["color"] }
 anyhow = { version = "1.0.80" }
@@ -103,9 +104,10 @@ pep440_rs = { version = "0.6.0", features = ["serde"] }
 pretty_assertions = "1.3.0"
 proc-macro2 = { version = "1.0.79" }
 pyproject-toml = { version = "0.9.0" }
-pyo3 = { version = "0.22.2", features = [
+pyo3 = { version = "0.22.*", features = [
   "abi3-py311",
-  "experimental-inspect"
+  "experimental-inspect",
+  "num-complex",
 ] }
 quick-junit = { version = "0.4.0" }
 quote = { version = "1.0.23" }
