--- a/crates/py_ast/Cargo.toml
+++ b/crates/py_ast/Cargo.toml
@@ -13,6 +13,7 @@ license.workspace = true
 pyo3 = { workspace = true }
 ruff_python_ast = { workspace = true }
 ruff_text_size = { workspace = true }
+num-complex = { workspace = true }
 
 [lints]
 workspace = true
