--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ ruff_server = { path = "crates/ruff_server" }
 ruff_source_file = { path = "crates/ruff_source_file" }
 ruff_text_size = { path = "crates/ruff_text_size" }
 
+bon = "*"
 num-complex = { version = "*" }
 aho-corasick = { version = "1.1.3" }
 annotate-snippets = { version = "0.9.2", features = ["color"] }
