--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,16 +20,17 @@ dev = [
     "maturin-import-hook>=0.1.0",
     "pytest-benchmark>=4.0.0",
     "pytest-memray",
+#    "pytest-insta",
     "psutil",
-    "syrupy",
-    "pyyaml>=6.0.2",
+#    "inline-snapshot",
+    "ruamel.yaml"
 ]
 [tool.maturin]
 features = ["pyo3/extension-module"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-addopts = "--benchmark-autosave --snapshot-patch-pycharm-diff"
+addopts = "--benchmark-autosave"
 
 [tool.ruff]
 exclude = ["crates", "tests/data"]
