--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,10 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = { workspace = true }
 ruff_python_parser = { workspace = true }
+ruff_source_file = { workspace = true }
 py_ast = { workspace = true }
 ruff_text_size = { workspace = true }
-miette = {workspace = true}
-thiserror = {workspace = true}
+annotate-snippets = { workspace = true }
 
 [workspace.dependencies]
 ruff_cache = { path = "crates/ruff_cache" }
@@ -45,7 +45,7 @@ ruff_text_size = { path = "crates/ruff_text_size" }
 bon = "*"
 num-complex = { version = "*" }
 aho-corasick = { version = "1.1.3" }
-annotate-snippets = { version = "0.9.2", features = ["color"] }
+annotate-snippets = { version = "*", features = ["color"] }
 anyhow = { version = "1.0.80" }
 argfile = { version = "0.2.0" }
 bincode = { version = "1.3.3" }
