chore: do not format snapshots

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@ repos:
     rev: "v5.0.0"
     hooks:
       - id: trailing-whitespace
+        exclude: .*\.snap$
       - id: check-yaml
       - id: check-toml
       - id: check-merge-conflict
