--- a/Cargo.toml
+++ b/Cargo.toml
@@ -206,3 +206,7 @@ rest_pat_in_fully_bound_structs = "warn"
 #strip = "debuginfo"
 #codegen-backend = "cranelift"
 #split-debuginfo = "unpacked"
+
+[profile.dev.package]
+insta.opt-level = 3
+similar.opt-level = 3
