--- a/tests/data/exprs.yml
+++ b/tests/data/exprs.yml
@@ -72,22 +72,23 @@ bg:
   exp: __xonsh__.cmd('emacs', 'ugggh', bg=True).out()
 regex:
 - inp: '`hello`'
-  exp: __xonsh__.regex_literal('hello')
+  exp: __xonsh__.Pattern('hello').regex()
 - inp: $(ls `#[Ff]+i*LE` -l)
-  exp: __xonsh__.cmd('ls', __xonsh__.regex_literal('#[Ff]+i*LE'), '-l').out()
+  exp: __xonsh__.cmd('ls', __xonsh__.Pattern('#[Ff]+i*LE').regex(), '-l').out()
+- inp: print(`#.*`)
+  exp: print(__xonsh__.Pattern('#.*').regex())
+- inp: $(ls `[Ff]+i*LE` -l)
+  exp: __xonsh__.cmd('ls', __xonsh__.Pattern('[Ff]+i*LE').regex(), '-l').out()
+raw-regex:
 - inp: $(ls r`[Ff]+i*LE` -l)
   exp: __xonsh__.cmd('ls', '[Ff]+i*LE', '-l').out()
 - inp: $(ls r`#[Ff]+i*LE` -l)
   exp: __xonsh__.cmd('ls', '#[Ff]+i*LE', '-l').out()
-- inp: print(`#.*`)
-  exp: print(__xonsh__.regex_literal('#.*'))
-- inp: $(ls `[Ff]+i*LE` -l)
-  exp: __xonsh__.cmd('ls', __xonsh__.regex_literal('[Ff]+i*LE'), '-l').out()
 glob:
 - inp: $(ls g`[Ff]+i*LE` -l)
-  exp: __xonsh__.cmd('ls', __xonsh__.glob_literal('[Ff]+i*LE'), '-l').out()
+  exp: __xonsh__.cmd('ls', __xonsh__.Pattern('[Ff]+i*LE').glob(), '-l').out()
 - inp: $(ls g`#[Ff]+i*LE` -l)
-  exp: __xonsh__.cmd('ls', __xonsh__.glob_literal('#[Ff]+i*LE'), '-l').out()
+  exp: __xonsh__.cmd('ls', __xonsh__.Pattern('#[Ff]+i*LE').glob(), '-l').out()
 decorator:
 - inp: $(ls @foo`[Ff]+i*LE` -l)
   exp: __xonsh__.cmd('ls', *__xonsh__.Pattern('[Ff]+i*LE').invoke(foo), '-l').out()
