feat: upgrade to pyo3
change part of the modules to use into_pyobject

--- a/crates/py_ast/Cargo.toml
+++ b/crates/py_ast/Cargo.toml
@@ -15,6 +15,7 @@ ruff_python_ast = { workspace = true }
 ruff_text_size = { workspace = true }
 num-complex = { workspace = true }
 bon = { workspace = true }
+ruff_source_file = { workspace = true }
 
 [lints]
 workspace = true
