--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,4 @@ ignore = [
 
 [tool.poe.tasks]
 print-enum-size = "env RUSTFLAGS=-Zprint-type-sizes cargo +nightly build -p ruff_python_parser --release"
+benchmark = "pytest --benchmark-autosave tests/bench.py"
