chore: update cargo build configs
disable sccache

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,16 +1,16 @@
 [build]
 rustflags = ["-Z", "threads=8"]
-rustc-wrapper = "sccache"
+#rustc-wrapper = "sccache"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
-opt-level = 1
+#opt-level = 1
 #codegen-backend = "cranelift"
 
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
-#codegen-backend = "llvm"
+codegen-backend = "llvm"
 
 # Enable more optimization in the release profile at the cost of compile time.
 [profile.release]
