--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -155,11 +155,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: [linux, musllinux, windows, macos, sdist]
+    strategy:
+      matrix:
+        python-version:
+          - "3.10"
+          - "3.11"
+          - "3.12"
+          - "3.13"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.12
+          python-version: ${{ matrix.python-version }}
       - name: Install uv
         uses: astral-sh/setup-uv@v4
         with:
