chore: remove unused deps

--- a/crates/py_ast/Cargo.toml
+++ b/crates/py_ast/Cargo.toml
@@ -14,7 +14,7 @@ pyo3 = { workspace = true }
 ruff_python_ast = { workspace = true }
 ruff_text_size = { workspace = true }
 num-complex = { workspace = true }
-bon = { workspace = true }
+# bon = { workspace = true }
 ruff_source_file = { workspace = true }
 
 [lints]
