--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ ruff_text_size = { workspace = true }
 annotate-snippets = { workspace = true }
 
 [dev-dependencies]
-insta = { workspace = true }
+# insta = { workspace = true }
 
 [workspace.dependencies]
 ruff_cache = { path = "crates/ruff_cache" }
@@ -99,7 +99,7 @@ lsp-types = { git = "https://github.com/astral-sh/lsp-types.git", rev = "3512a9f
 matchit = { version = "0.8.1" }
 memchr = { version = "2.7.1" }
 mimalloc = { version = "0.1.39" }
-miette = {version = "*", features = ["fancy"]}
+miette = { version = "*", features = ["fancy"] }
 natord = { version = "1.0.9" }
 notify = { version = "6.1.1" }
 once_cell = { version = "1.19.0" }
