--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ ruff_source_file = { workspace = true }
 py_ast = { workspace = true }
 ruff_text_size = { workspace = true }
 annotate-snippets = { workspace = true }
+bon = { workspace = true }
 
 [dev-dependencies]
 # insta = { workspace = true }
@@ -45,6 +46,7 @@ ruff_python_trivia = { path = "crates/ruff_python_trivia" }
 ruff_source_file = { path = "crates/ruff_source_file" }
 ruff_text_size = { path = "crates/ruff_text_size" }
 
+bon = { version = "*" }
 num-complex = { version = "*" }
 aho-corasick = { version = "1.1.3" }
 annotate-snippets = { version = "*", features = ["color"] }
